--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,11 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.1.23</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>com.yonyou.cloud.apm</groupId>
             <artifactId>apm-dapper</artifactId>
             <version>2.13.0-RELEASE</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
