--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,3 +23,4 @@ reggie:
   accessKeyId: LTAI5tMHJgr
   accessKeySecret: Hv0t8CKG2FO
   accessKeyId_: 6cdhZeC4sW5hU
+  accessKeySecret_: 8IIR28QhHNf0FpusiRg
