--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,10 @@
             <version>2.13.0-RELEASE</version>
         </dependency>-->
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>commons-codec</groupId>
