--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
         max-wait: 1ms #连接池最大阻塞等待时间
         max-idle: 4 #连接池中的最大空闲连接
         min-idle: 0 #连接池中的最小空闲连接
+  cache:
+    redis:
+      time-to-live: 1800000 #设置缓存时间为1800s--30min
   datasource:
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
