--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,11 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>4.0.0-RC1</version>
+        </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>alibabacloud-dysmsapi20170525</artifactId>
@@ -154,5 +158,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
